[package]
name = "sharing"
version = "0.0.0"
edition = "2018"
authors = ["Liam Perlaki <lperlaki@icloud.com>"]
repository = "https://github.com/lperlaki/sharing-rs"
description = "Sharing"
license = "MIT"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
